--- a/views/single-customs/single-surovina-chemickeho-prumyslu.html.twig
+++ b/views/single-customs/single-surovina-chemickeho-prumyslu.html.twig
@@ -16,11 +16,14 @@
         </div>
         {% if post.references|length > 0 %}
             <div class="col-12">
+                <h4>Literatura</h4>
                 <ul>
                     {% for reference in post.references %}
                         <li>
-                            <sup>{{ reference.reference_id }}</sup>
-                            <span>{{ reference.reference_text }}</span>
+                            <p>
+                                <sup>{{ reference.reference_id }}</sup>
+                                <span>{{ reference.reference_text }}</span>
+                            </p>
                         </li>
                     {% endfor %}
                 </ul>
