Some changes based on new requirements.

--- a/views/post-parts/layout/main-banner-row.html.twig
+++ b/views/post-parts/layout/main-banner-row.html.twig
@@ -9,7 +9,10 @@
             {{ site.name }}
         </h1>
         <h2 class="p-5 pt-2 {{ isHome ? ' d-none ' : '' }}">
-            {{ post.title }}
+            {%- if post.type.labels.name|default %}
+                {{ post.type.labels.name }}
+            {% endif -%}
+            {{- post.title -}}
         </h2>
     </div>
 </header>
