--- a/views/post-parts/layout/main-banner-row.html.twig
+++ b/views/post-parts/layout/main-banner-row.html.twig
@@ -10,7 +10,7 @@
         </h1>
         <h2 class="p-5 pt-2 {{ isHome ? ' d-none ' : '' }}">
             {%- if post.type.labels.name|default -%}
-                <small class="d-block">{{ post.type.labels.name }}</small>
+                <small class="d-block pb-3">{{ post.type.labels.name }}</small>
             {%- endif -%}
             {{- post.title -}}
         </h2>
