--- a/views/post-parts/layout/main-banner-row.html.twig
+++ b/views/post-parts/layout/main-banner-row.html.twig
@@ -9,8 +9,8 @@
             {{ site.name }}
         </h1>
         <h2 class="p-5 pt-2 {{ isHome ? ' d-none ' : '' }}">
-            {%- if post.type.labels.name|default -%}
-                <small class="d-block pb-3">{{ post.type.labels.name }}</small>
+            {%- if post.type.labels.name_as_subtitle|default -%}
+                <small class="d-block pb-3">{{ post.type.labels.name_as_subtitle }}</small>
             {%- endif -%}
             {{- post.title -}}
         </h2>
