--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -35,7 +35,7 @@
 
     {% for material in materials %}
         <section class="row my-5">
-            <div class="col-12 col-md-8 d-flex align-items-start flex-column">
+            <div class="col-12 col-md-8 col-lg-9 d-flex align-items-start flex-column">
                 <a href="{{ material.link }}" class="text-dark text-decoration-none">
                     <h3>{{ material.title }}</h3>
                 </a>
@@ -43,7 +43,7 @@
                     {{ material.content }}
                 </div>
             </div>
-            <div class="col-12 col-md-4 d-flex flex-column justify-content-center order-lg-first">
+            <div class="col-12 col-md-4 col-lg-3 d-flex flex-column justify-content-center order-lg-first">
                 {% set image_src = material.thumbnail.src|default(get_image(material.meta('_menu_image')).src|default) %}
                 {% if image_src|default and image_src|length > 0 %}
                     <a href="{{ material.link }}" title="{{ material.title }}" class="mb-3">
