--- a/views/post-parts/layout/main-banner-row.html.twig
+++ b/views/post-parts/layout/main-banner-row.html.twig
@@ -5,10 +5,10 @@
         <img alt="CHEMIE ŽIJE!" class="img-fluid m-auto" src="{{ imageSrc }}">
     </div>
     <div class="col-12 col-lg-6 {{ isHome ? '' : 'col-xl-7' }} title-box d-flex flex-column justify-content-center text-center">
-        <h1 class="p-5 text-capitalize {{ isHome ? ' single-heading ' : ' pb-2 ' }}">
+        <h1 class="p-5 pt-3 text-capitalize {{ isHome ? ' single-heading ' : ' pb-2 ' }}">
             {{ site.name }}
         </h1>
-        <h2 class="p-5 pt-2 {{ isHome ? ' d-none ' : '' }}">
+        <h2 class="p-5 pt-2 pb-3 {{ isHome ? ' d-none ' : '' }}">
             {%- if post.type.labels.name_as_subtitle|default or subtitle -%}
                 <small class="d-block pb-3">
                     {{ subtitle|default(post.type.labels.name_as_subtitle) }}
