--- a/views/post-parts/layout/signpost-item.html.twig
+++ b/views/post-parts/layout/signpost-item.html.twig
@@ -6,7 +6,7 @@
                  style="background-image: url({{ image_src }})">
             </div>
         {% endif %}
-        {% set classes = post.meta('_menu_image')|default ? 'justify-content-center': 'justify-content-center align-items-center' %}
+        {% set classes = image_src|default ? 'justify-content-center': 'justify-content-center align-items-center' %}
         <div class="card-body d-flex flex-column align-middle {{ classes }}" style="min-height: 6em;">
             <h5 class="card-title {{ post.post_excerpt|default|length > 0 ? '' : 'text-center' }}">
                 {{ post.title }}
