--- a/views/single-customs/single-industry-field.html.twig
+++ b/views/single-customs/single-industry-field.html.twig
@@ -11,17 +11,33 @@
             </div>
         </div>
         {% if post.tabs|length > 0 %}
-            <div class="col-12">
-                <h4>Literatura</h4>
-                <ul style="list-style: none;">
-                    {% for reference in post.references %}
-                        <li>
-                            <sup>{{ reference.reference_id }}</sup>
-                            <span>{{ reference.reference_text }}</span>
-                        </li>
+            <nav class="col-12">
+                <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                    {% for tab in index, post.tabs %}
+                        <button class="nav-link {{ index <= 1 ? ' active' : '' }}"
+                                id="nav-tab-{{ index }}"
+                                data-bs-toggle="tab"
+                                data-bs-target="#nav-{{ index }}"
+                                type="button"
+                                role="tab"
+                                aria-controls="nav-profile"
+                                aria-selected="{{ index <= 1 ? 'true' : 'false' }}">
+                            {{ tab.tab_title }}
+                        </button>
                     {% endfor %}
-                </ul>
+                </div>
+            </nav>
+            <div class="tab-content" id="nav-tabContent">
+                {% for tab in index, post.tabs %}
+                    <div class="tab-pane fade {{ index <= 1 ? ' show active' : '' }}"
+                         id="nav-{{ index }}"
+                         role="tabpanel"
+                         aria-labelledby="nav-tab-{{ index }}">
+                        {{ tab.tab_content }}
+                    </div>
+                {% endfor %}
             </div>
         {% endif %}
+
     </section>
 {% endblock %}
