--- a/views/single-customs/single-industry-field.html.twig
+++ b/views/single-customs/single-industry-field.html.twig
@@ -13,7 +13,7 @@
         {% if post.tabs|length > 0 %}
             <nav class="col-12">
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                    {% for tab in index, post.tabs %}
+                    {% for index, tab in post.tabs %}
                         <button class="nav-link {{ index <= 1 ? ' active' : '' }}"
                                 id="nav-tab-{{ index }}"
                                 data-bs-toggle="tab"
@@ -28,7 +28,7 @@
                 </div>
             </nav>
             <div class="tab-content" id="nav-tabContent">
-                {% for tab in index, post.tabs %}
+                {% for index, tab in post.tabs %}
                     <div class="tab-pane fade {{ index <= 1 ? ' show active' : '' }}"
                          id="nav-{{ index }}"
                          role="tabpanel"
