--- a/views/single-customs/single-industry-field.html.twig
+++ b/views/single-customs/single-industry-field.html.twig
@@ -10,34 +10,32 @@
                 {{ post.content }}
             </div>
         </div>
-        {% if post.tabs|length > 0 %}
             <nav class="col-12">
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                    {% for index, tab in post.tabs %}
-                        <button class="nav-link {{ index <= 1 ? ' active' : '' }}"
-                                id="nav-tab-{{ index }}"
+                    {% for tab in post.tabs %}
+                        <button class="nav-link {{ 1 <= 1 ? ' active' : '' }}"
+                                id="nav-tab-{{ 1 }}"
                                 data-bs-toggle="tab"
-                                data-bs-target="#nav-{{ index }}"
+                                data-bs-target="#nav-{{ 1 }}"
                                 type="button"
                                 role="tab"
                                 aria-controls="nav-profile"
-                                aria-selected="{{ index <= 1 ? 'true' : 'false' }}">
+                                aria-selected="{{ 1 <= 1 ? 'true' : 'false' }}">
                             {{ tab.tab_title }}
                         </button>
                     {% endfor %}
                 </div>
             </nav>
             <div class="tab-content" id="nav-tabContent">
-                {% for index, tab in post.tabs %}
-                    <div class="tab-pane fade {{ index <= 1 ? ' show active' : '' }}"
-                         id="nav-{{ index }}"
+                {% for tab in post.tabs %}
+                    <div class="tab-pane fade {{ 1 <= 1 ? ' show active' : '' }}"
+                         id="nav-{{ 1 }}"
                          role="tabpanel"
-                         aria-labelledby="nav-tab-{{ index }}">
+                         aria-labelledby="nav-tab-{{ 1 }}">
                         {{ tab.tab_content }}
                     </div>
                 {% endfor %}
             </div>
-        {% endif %}
 
     </section>
 {% endblock %}
