--- a/views/single-customs/single-industry-field.html.twig
+++ b/views/single-customs/single-industry-field.html.twig
@@ -14,14 +14,14 @@
             <nav class="col-12">
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
                     {% for index, tab in post.tabs %}
-                        <button class="nav-link {{ index <= 1 ? ' active' : '' }}"
+                        <button class="nav-link {{ index < 1 ? ' active' : '' }}"
                                 id="nav-tab-{{ index }}"
                                 data-bs-toggle="tab"
                                 data-bs-target="#nav-{{ index }}"
                                 type="button"
                                 role="tab"
                                 aria-controls="nav-profile"
-                                aria-selected="{{ index <= 1 ? 'true' : 'false' }}">
+                                aria-selected="{{ index < 1 ? 'true' : 'false' }}">
                             {{ tab.tab_title }}
                         </button>
                     {% endfor %}
@@ -29,7 +29,7 @@
             </nav>
             <div class="tab-content" id="nav-tabContent">
                 {% for index, tab in post.tabs %}
-                    <div class="tab-pane fade {{ index <= 1 ? ' show active' : '' }}"
+                    <div class="tab-pane fade {{ index < 1 ? ' show active' : '' }}"
                          id="nav-{{ index }}"
                          role="tabpanel"
                          aria-labelledby="nav-tab-{{ index }}">
