--- a/views/single-customs/single-industry-field.html.twig
+++ b/views/single-customs/single-industry-field.html.twig
@@ -10,24 +10,52 @@
                 {{ post.content }}
             </div>
         </div>
-        {% if post.tabs|length > 0 %}
-            <nav class="col-12">
-                <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                    {% for index, tab in post.tabs %}
-                        <button class="nav-link {{ index < 1 ? ' active' : '' }}"
-                                id="nav-tab-{{ index }}"
-                                data-bs-toggle="tab"
-                                data-bs-target="#nav-{{ index }}"
-                                type="button"
-                                role="tab"
-                                aria-controls="nav-profile"
-                                aria-selected="{{ index < 1 ? 'true' : 'false' }}">
-                            {{ tab.tab_title }}
-                        </button>
-                    {% endfor %}
-                </div>
-            </nav>
-            <div class="tab-content" id="nav-tabContent">
+    </section>
+
+    <div class="row px-3 mt-0 mb-0" style="line-height: 1.1;">
+        {% for oneSubType in subtypes %}
+            <!-- ONE SUBTYPE -->
+            {% set classes_common = "d-flex col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 text-center align-items-center justify-content-center" %}
+            {% set classes_border = "border border-2 border-primary" %}
+            {% set classes = classes_common ~ " " ~ classes_border %}
+            {% if subtype == oneSubType.slug %}
+                <a class="{{ classes }} bg-white text-primary" href="?oblast={{ oneSubType.slug }}"
+                   style="border-top-left-radius: 1.2em !important; border-top-right-radius: 1.2em !important;">
+                    <strong>{{ oneSubType.name }}</strong>
+                </a>
+            {% else %}
+                <a class="{{ classes }} bg-primary text-white" href="?oblast={{ oneSubType.slug }}"
+                   style="border-top-left-radius: 1.2em !important; border-top-right-radius: 1.2em !important;">
+                    {{ oneSubType.name }}
+                </a>
+            {% endif %}
+        {% endfor %}
+    </div>
+
+
+    {% if post.tabs|length > 0 %}
+        <nav class="row px-3 mt-0 mb-0" style="line-height: 1.1;">
+            <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                {% for index, tab in post.tabs %}
+                    {% set classes_common = "d-flex col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 text-center align-items-center justify-content-center" %}
+                    {% set classes_border = "border border-2 border-primary" %}
+                    {% set classes = classes_common ~ " " ~ classes_border %}
+                    <button class="{{ classes }} bg-white text-primary nav-link {{ index < 1 ? ' active' : '' }}"
+                            style="border-top-left-radius: 1.2em !important; border-top-right-radius: 1.2em !important;"
+                            id="nav-tab-{{ index }}"
+                            data-bs-toggle="tab"
+                            data-bs-target="#nav-{{ index }}"
+                            type="button"
+                            role="tab"
+                            aria-controls="nav-profile"
+                            aria-selected="{{ index < 1 ? 'true' : 'false' }}">
+                        {{ tab.tab_title }}
+                    </button>
+                {% endfor %}
+            </div>
+        </nav>
+        <section class="row my-5">
+            <div class="tab-content col-12" id="nav-tabContent">
                 {% for index, tab in post.tabs %}
                     <div class="tab-pane fade {{ index < 1 ? ' show active' : '' }}"
                          id="nav-{{ index }}"
@@ -37,7 +65,7 @@
                     </div>
                 {% endfor %}
             </div>
-        {% endif %}
+        </section>
+    {% endif %}
 
-    </section>
 {% endblock %}
