--- a/views/single-customs/single-industry-field.html.twig
+++ b/views/single-customs/single-industry-field.html.twig
@@ -14,19 +14,16 @@
 
     {% if post.tabs|length > 0 %}
         <nav class="row p-0 m-0" style="line-height: 1.1;">
-            <div class="nav" id="nav-tab" role="tablist">
+            <div class="nav rounded-tabs" id="nav-tab" role="tablist">
                 {% for index, tab in post.tabs %}
-                    {% set classes_common = "d-flex col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 text-center align-items-center justify-content-center" %}
-                    {% set classes_border = "border border-2 border-primary" %}
-                    {% set classes = classes_common ~ " " ~ classes_border %}
-                    <button class="{{ classes }} bg-white text-primary nav-link {{ index < 1 ? ' active' : '' }}"
-                            style="border-top-left-radius: 1.2em !important; border-top-right-radius: 1.2em !important;"
+                    {% set active = index < 1 ? 'active' : '' %}
+                    <button class="rounded-tab col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 border border-2 border-primary {{ active }}"
                             id="nav-tab-{{ index }}"
                             data-bs-toggle="tab"
                             data-bs-target="#nav-{{ index }}"
                             type="button"
                             role="tab"
-                            aria-controls="nav-profile"
+                            aria-controls="nav-{{ index }}"
                             aria-selected="{{ index < 1 ? 'true' : 'false' }}">
                         {{ tab.tab_title }}
                     </button>
