Some changes based on new requirements.

--- a/views/layouts/page-layout.html.twig
+++ b/views/layouts/page-layout.html.twig
@@ -56,7 +56,7 @@ DEFAULT PAGE TEMPLATE - Used (directly or through inheritance) by every other pa
 {% block body_content %}
     <div class="container content-wrapper">
         <div class="row">
-            <main class="col-12 {{ sidebars.content|default ? 'col-lg-8' : '' }}" id="main-content">
+            <main class="col-12 m-0 p-0 {{ sidebars.content|default ? 'col-lg-8' : '' }}" id="main-content">
                 {% block page_content %}
                     {% include 'post-parts/not-found.twig' %}
                 {% endblock page_content %}
