--- a/views/layouts/page-layout.html.twig
+++ b/views/layouts/page-layout.html.twig
@@ -54,20 +54,11 @@ DEFAULT PAGE TEMPLATE - Used (directly or through inheritance) by every other pa
 {% endblock body_header %}
 
 {% block body_content %}
-    <div class="container content-wrapper">
-        <div class="row">
-            <main class="col-12 m-0 p-0 {{ sidebars.content|default ? 'col-lg-8' : '' }}" id="main-content">
-                {% block page_content %}
-                    {% include 'post-parts/not-found.twig' %}
-                {% endblock page_content %}
-            </main>
-            {% if sidebars.content|default %}
-                <aside class="col-12 col-lg-4">
-                    {{ sidebars.content|default }}
-                </aside>
-            {% endif %}
-        </div>
-    </div>
+    <main class="container content-wrapper" id="main-content">
+        {% block page_content %}
+            {% include 'post-parts/not-found.twig' %}
+        {% endblock page_content %}
+    </main>
 {% endblock body_content %}
 
 {% block body_footer %}
