--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -21,6 +21,8 @@ $rfs-base-value: 0.8rem;
 }
 
 .rounded-tabs {
+  margin-left: -10px;
+  margin-right: -10px;
 
   .rounded-tab {
     //  bg-white text-primary
