--- a/views/single-customs/single-industry-field.html.twig
+++ b/views/single-customs/single-industry-field.html.twig
@@ -15,21 +15,23 @@
     {% endif %}
 
     {% if post.tabs|length > 0 %}
-        <div class="row rounded-tabs p-0 m-0" id="nav-tab" role="tablist" style="line-height: 1.1;">
-            {% for index, tab in post.tabs %}
-                {% set active = index < 1 ? 'active' : '' %}
-                <button class="rounded-tab col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 border border-2 border-primary {{ active }}"
-                        id="nav-tab-{{ index }}"
-                        data-bs-toggle="tab"
-                        data-bs-target="#nav-{{ index }}"
-                        type="button"
-                        role="tab"
-                        aria-controls="nav-{{ index }}"
-                        aria-selected="{{ index < 1 ? 'true' : 'false' }}">
-                    {{ tab.tab_title }}
-                </button>
-            {% endfor %}
-        </div>
+        <nav class="row p-0 m-0" style="line-height: 1.1;">
+            <div class="rounded-tabs" id="nav-tab" role="tablist">
+                {% for index, tab in post.tabs %}
+                    {% set active = index < 1 ? 'active' : '' %}
+                    <button class="rounded-tab col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 border border-2 border-primary {{ active }}"
+                            id="nav-tab-{{ index }}"
+                            data-bs-toggle="tab"
+                            data-bs-target="#nav-{{ index }}"
+                            type="button"
+                            role="tab"
+                            aria-controls="nav-{{ index }}"
+                            aria-selected="{{ index < 1 ? 'true' : 'false' }}">
+                        {{ tab.tab_title }}
+                    </button>
+                {% endfor %}
+            </div>
+        </nav>
         <section class="row my-5">
             <div class="tab-content col-12" id="nav-tabContent">
                 {% for index, tab in post.tabs %}
