--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -23,6 +23,7 @@ $rfs-base-value: 0.8rem;
 .rounded-tabs {
   margin-left: -10px;
   margin-right: -10px;
+  line-height: 1.1;
 
   .rounded-tab {
     //  bg-white text-primary
