Implemented new/updated requirements.

--- a/views/single-customs/single-industry-field.html.twig
+++ b/views/single-customs/single-industry-field.html.twig
@@ -16,7 +16,7 @@
 
     {% if post.tabs|length > 0 %}
         <nav>
-            <div class="row p-0 rounded-tabs" id="nav-tab" role="tablist">
+            <div class="nav row p-0 rounded-tabs" id="nav-tab" role="tablist">
                 {% for index, tab in post.tabs %}
                     {% set active = index < 1 ? 'active' : '' %}
                     <button class="rounded-tab col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 border border-2 border-primary {{ active }}"
