Implemented new/updated requirements.

--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -10,7 +10,7 @@
   grid-gap: .15em;
   text-align: center;
 
-  span {
+  * span {
     text-align: center;
   }
 
@@ -36,7 +36,6 @@
   }
 
   * {
-    text-align: center;
     box-sizing: border-box;
   }
 
