Implemented new/updated requirements.

--- a/views/post-parts/periodical-table/interactive-periodical-table.html.twig
+++ b/views/post-parts/periodical-table/interactive-periodical-table.html.twig
@@ -18,27 +18,27 @@
         {% if element.period and element.periodical_group %}
             {% set col = element.periodical_group + 1 %}
             {% set row = element.period + 1 %}
-        {% elseif element.atomic_number >= 58 and element.atomic_number <= 71 %}
-            {% set col = element.proton_number - 54 %}
+        {% elseif element.protonNumber >= 58 and element.protonNumber <= 71 %}
+            {% set col = element.protonNumber - 54 %}
             {% set row = 10 %}
-        {% elseif element.atomic_number >= 90 and element.atomic_number <= 103 %}
-            {% set col = element.atomic_number - 86 %}
+        {% elseif element.protonNumber >= 90 and element.protonNumber <= 103 %}
+            {% set col = element.protonNumber - 86 %}
             {% set row = 11 %}
         {% endif %}
         {% if row and col %}
             <div class="element" style="grid-column: {{ col }}; grid-row: {{ row }};">
                 <div class="element-content">
                     <span class="atomic-number">
-                        {{ element.atomic_number }}
+                        {{ element.protonNumber }}
                     </span>
                     <span class="symbol">
                         {{ element.symbol }}
                     </span>
                     <span class="name d-none d-md-block">
-                        {{ element.name_cz }}
+                        {{ element.nameCz }}
                     </span>
                     <span class="atomic-weight d-none d-md-block">
-                        {{ element.atomic_weight }}
+                        {{ element.relativeAtomicWeight }}
                     </span>
                     <span class="d-md-none"></span>
                 </div>
