--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -56,7 +56,7 @@
 
   .element {
     overflow: hidden;
-    background-color: blue;
+    background-color: grey;
     clip-path: polygon(
                     0% 0%, /* top left */
                     100% 0%, /* top right */
@@ -70,9 +70,9 @@
       flex-direction: column;
       align-items: center;
       justify-content: space-between;
-      width: calc(100% - .5em);
-      height: calc(100% - .5em);
-      margin: .25em;
+      width: calc(100% - .8em);
+      height: calc(100% - .8em);
+      margin: .4em;
       padding: 0 .2em .2em;
       background-color: rgba(255, 255, 255, 0.6);
       clip-path: polygon(
