--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -107,6 +107,8 @@
       .name {
         font-size: .65em;
         font-weight: bold;
+        width: auto;
+        max-width: calc(100% + 1.6em);
       }
     }
   }
