--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -111,6 +111,13 @@
         max-width: calc(100% + 1.6em);
       }
     }
+
+    &:hover {
+      .element-content {
+        background-color: rgba(255, 255, 255, 0.7);
+      }
+    }
+
   }
 
 }
