Implemented new/updated requirements.

--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -57,6 +57,7 @@
   .element {
     overflow: hidden;
     background-color: grey;
+    color: inherit;
     clip-path: polygon(
                     0% 0%, /* top left */
                     100% 0%, /* top right */
