Implemented new/updated requirements.

--- a/views/post-parts/periodical-table/interactive-periodical-table.html.twig
+++ b/views/post-parts/periodical-table/interactive-periodical-table.html.twig
@@ -21,7 +21,7 @@
         {% endif %}
         {% if row and col %}
             {% set color = element.color|default ? ' background-color: ' ~ element.color ~ '; ' : '' %}
-            <a class="element" style="grid-column: {{ col }}; grid-row: {{ row }};{{ color }}" href="/prvek/{{ element.nameCz|slug }}">
+            <a class="element" style="grid-column: {{ col }}; grid-row: {{ row }};{{ color }}" href="/prvek/{{ slug(element.nameCz) }}">
                 <div class="element-content">
                     <span class="atomic-number">
                         {{ element.protonNumber }}
