Implemented new/updated requirements.

--- a/views/post-parts/layout/main-banner-row.html.twig
+++ b/views/post-parts/layout/main-banner-row.html.twig
@@ -16,7 +16,7 @@
                 </small>
             {%- endif -%}
             #}
-            {{- post.title -}}
+            {{- post.title ?? 'Stránka nenalezena' -}}
         </h2>
     </div>
 </header>
