Implemented new/updated requirements.

--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -4,49 +4,32 @@
 
 {% set map = site.theme.link ~ '/images/others/map.png' %}
 
-{% block body_content %}
-    <div class="container content-wrapper">
-        <div class="row">
-            <main class="col-12 {{ sidebars.content|default ? 'col-lg-8' : '' }}" id="main-content">
-                <article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-                    {% block article_header %}
-                        {% include 'post-parts/layout/main-banner-row.html.twig'
-                            with {image: post ? post.thumbnail : null, title: post ? post.title : 'Stránka nenalezena'} %}
-                    {% endblock article_header %}
-                </article>
-            </main>
-            {% if sidebars.content|default %}
-                <aside class="col-12 col-lg-4">
-                    {{ sidebars.content|default }}
-                </aside>
-            {% endif %}
-        </div>
-    </div>
-    <div class="container-fluid">
+{% block page_content %}
+    {% block article_content %}
         <article class="row post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-            <section class="col-12 m-0 p-0">
-                <div class="ratio ratio-21x9">
-                    {% apply shortcodes %}
-                        [leaflet-map]
-                        {% for company in companies %}
-                            {% for location in company.locations %}
-                                {{ dump(company.logo) }}
-                                <!-- MARKER: {{ location.location_name }} LOGO: {{ company.logo }} -->
-                                {% apply spaceless -%}
-                                    [leaflet-marker lat={{ location.location_latitude }} lng={{ location.location_longitude }}
-                                    ]<a href='{{ company.link()|escape }}' style='text-align: center!important;'>
-                                    <h5 class="text-center"><strong>{{ company.title|escape }}</strong></h5>
-                                    <h6 class="text-center">{{ location.location_name|escape }}</h6>
-                                </a>[/leaflet-marker]
-                                {%- endapply %}
-                            {% endfor %}
-                        {% endfor %}
-                    {% endapply %}
-                </div>
-            </section>
             <section class="col-12">
                 {{ post.content }}
             </section>
+            <section class="col-12 m-0 p-0">
+                <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d"
+                        width="100%"
+                        height="500px"
+                        allowfullscreen
+                        style="border: 0 none;"
+                        allow="geolocation">
+                    Interaktivní mapa chemický podniků se načítá...
+                </iframe>
+            </section>
+            <section>
+                {% for company in companies %}
+                    {% for location in company.locations %}
+                        {{ dump(company.logo) }}
+                        <!-- MARKER: {{ location.location_name }} LOGO: {{ company.logo }} -->
+                        <h5 class="text-center"><strong>{{ company.title|escape }}</strong></h5>
+                        <h6 class="text-center">{{ location.location_name|escape }}</h6>
+                    {% endfor %}
+                {% endfor %}
+            </section>
         </article>
-    </div>
-{% endblock body_content %}
+    {% endblock article_content %}
+{% endblock page_content %}
