Implemented new/updated requirements.

--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -12,10 +12,9 @@
             </section>
             <section class="col-12 m-0 p-0">
                 <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d"
-                        width="100%"
-                        height="500px"
+                        class="ratio ratio-21x9"
                         allowfullscreen
-                        style="border: 0 none;"
+                        style="border: 0 none; width: 100%;"
                         allow="geolocation">
                     Interaktivní mapa chemický podniků se načítá...
                 </iframe>
