--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -10,12 +10,12 @@
             <section class="col-12">
                 {{ post.content }}
             </section>
-            <section class="col-12 m-0 p-0 ratio ratio-4x3">
+            <section class="col-12 m-0 p-0">
                 <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d"
                         allowfullscreen
                         width="100%"
                         height="100%"
-                        style="border: 0 none; width: 100%; height: 100%;"
+                        style="border: 0 none; width: 100%; height: 100%; aspect-ratio: 1/2;"
                         allow="geolocation">
                     Interaktivní mapa chemický podniků se načítá...
                 </iframe>
