--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -8,36 +8,12 @@
             <section class="col-12">
                 {{ post.content }}
             </section>
-            <section class="col-12 m-0 p-0">
-                <style>
-                    .embed-container {
-                        position: relative;
-                        padding-bottom: 80%;
-                        height: 0;
-                        max-width: 100%;
-                    }
-
-                    .embed-container iframe, .embed-container object, .embed-container iframe {
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                        width: 100%;
-                        height: 100%;
-                    }
-
-                    small {
-                        position: absolute;
-                        z-index: 40;
-                        bottom: 0;
-                        margin-bottom: -15px;
-                    }
-                </style>
-                <div class="embed-container"><small><a
-                                href="//www.arcgis.com/apps/Embed/index.html?webmap=b69f17f8e0ca44d3a8d86c314cf25127&extent=11.0784,48.5088,19.1919,51.4706&home=true&zoom=true&scale=true&search=true&searchextent=true&disable_scroll=true&theme=light"
-                                style="color:#0000FF;text-align:left" target="_blank">Zobrazit větší mapu</a></small><br>
-                    <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="nemapa"
-                            src="//www.arcgis.com/apps/Embed/index.html?webmap=b69f17f8e0ca44d3a8d86c314cf25127&extent=11.0784,48.5088,19.1919,51.4706&home=true&zoom=true&previewImage=false&scale=true&search=true&searchextent=true&disable_scroll=true&theme=light"></iframe>
-                </div>
+            <section class="col-12 m-0 p-0 ratio ratio-16x9">
+                    <iframe width="100%"
+                            height="100%"
+                            allow="geolocation"
+                            src="//www.arcgis.com/apps/Embed/index.html?webmap=b69f17f8e0ca44d3a8d86c314cf25127&extent=11.0784,48.5088,19.1919,51.4706&home=true&zoom=true&previewImage=false&scale=true&search=true&searchextent=true&disable_scroll=true&theme=light">
+                    </iframe>
                 {# <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d" #}
                 {# allowfullscreen #}
                 {# width="100%" #}
