Implemented new/updated requirements.

--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -12,7 +12,7 @@
                     <iframe width="100%"
                             height="100%"
                             allow="geolocation"
-                            src="//www.arcgis.com/apps/Embed/index.html?webmap=b69f17f8e0ca44d3a8d86c314cf25127&extent=11.0784,48.5088,19.1919,51.4706&home=true&zoom=true&previewImage=false&scale=true&search=true&searchextent=true&disable_scroll=true&theme=light">
+                            src="//www.arcgis.com/apps/Embed/index.html?webmap=b69f17f8e0ca44d3a8d86c314cf25127&extent=11.4959,48.3009,19.6093,51.2752&home=true&zoom=true&previewImage=false&scale=true&legendlayers=true&disable_scroll=true&theme=light">
                     </iframe>
                 {# <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d" #}
                 {# allowfullscreen #}
