--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -9,19 +9,21 @@
                 {{ post.content }}
             </section>
             <section class="col-12 m-0 p-0 ratio ratio-16x9">
+{#
                     <iframe width="100%"
                             height="100%"
                             allow="geolocation"
                             src="//www.arcgis.com/apps/Embed/index.html?webmap=b69f17f8e0ca44d3a8d86c314cf25127&extent=11.4959,48.3009,19.6093,51.2752&home=true&zoom=true&previewImage=false&scale=true&legendlayers=true&disable_scroll=true&theme=light">
                     </iframe>
-                {# <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d" #}
-                {# allowfullscreen #}
-                {# width="100%" #}
-                {# height="100%" #}
-                {# style="border: 0 none; width: 100%; height: 100%;" #}
-                {# allow="geolocation"> #}
-                {# Interaktivní mapa chemický podniků se načítá... #}
-                {# </iframe> #}
+#}
+                 <iframe src="https://storymaps.arcgis.com/stories/f64fc046282048da966710b49e8a20bb"
+                 allowfullscreen
+                 width="100%"
+                 height="100%"
+                 style="border: 0 none; width: 100%; height: 100%;"
+                 allow="geolocation">
+                 Interaktivní mapa chemických podniků se načítá...
+                 </iframe>
             </section>
             <section>
                 {% for company in companies %}
