Implemented new/updated requirements.

--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -12,8 +12,7 @@
                  <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d"
                  allowfullscreen
                  width="100%"
-                 height="100%"
-                 style="border: 0 none; width: 100%; height: 100%;"
+                 style="border: 0 none; width: 100%;"
                  allow="geolocation">
                  Interaktivní mapa chemických podniků se načítá...
                  </iframe>
