Implemented new/updated requirements.

--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -8,7 +8,7 @@
             <section class="col-12">
                 {{ post.content }}
             </section>
-            <section class="col-12 m-0 p-0 ratio ratio-16x9">
+            <section class="col-12 m-0 p-0">
                  <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d"
                  allowfullscreen
                  width="100%"
