--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -8,9 +8,10 @@
             <section class="col-12">
                 {{ post.content }}
             </section>
-            <section class="col-12 m-0 p-0">
+            <section class="col-12 m-0 p-0 ratio ratio-1x1">
                  <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d"
                  allowfullscreen
+                 style="border: 0 none; width: 100%;"
                  allow="geolocation">
                  Interaktivní mapa chemických podniků se načítá...
                  </iframe>
