--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -8,8 +8,16 @@
             <section class="col-12">
                 {{ post.content }}
             </section>
+            <script>
+              document.querySelector('#interactive-map').addEventListener("load", ev => {
+                const new_style_element = document.createElement("style");
+                new_style_element.textContent = ".story > *:first-child, .story > *:last-child {display: none !important;}"
+                ev.target.contentDocument.head.appendChild(new_style_element);
+              });
+            </script>
             <section class="col-12 m-0 p-0 ratio ratio-1x1">
                  <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d"
+                 id="interactive-map"
                  allowfullscreen
                  style="border: 0 none; width: 100%;"
                  allow="geolocation">
