Implemented new/updated requirements.

--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -17,10 +17,12 @@
               });
             </script>
             <section class="col-12 m-0 p-0 ratio ratio-1x1">
-                 <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d"
+                 <!--suppress HtmlDeprecatedAttribute -->
+                <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d"
                  id="interactive-map"
                  allowfullscreen
-                 style="border: 0 none; width: 100%;"
+                 style="border: 0 none; width: 100%; overflow: hidden; overscroll-behavior: none;"
+                 scrolling="no"
                  allow="geolocation">
                  Interaktivní mapa chemických podniků se načítá...
                  </iframe>
