Implemented new/updated requirements.

--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -4,31 +4,72 @@
 
 {% block page_content %}
     {% block article_content %}
-        <article class="row post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-            <section class="col-12">
+        <nav class="nav row p-0 rounded-tabs" id="nav-tab">
+            {% set tabs = ['Mapa', 'Podklady pro exkurze'] %}
+            {% for index, tab in tabs %}
+                {% set active = index < 1 ? 'active' : '' %}
+                <button class="rounded-tab col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 border border-2 border-primary {{ active }}"
+                        id="nav-tab-{{ index }}"
+                        data-bs-toggle="tab"
+                        data-bs-target="#nav-{{ index }}"
+                        type="button"
+                        role="tab"
+                        aria-controls="nav-{{ index }}"
+                        aria-selected="{{ index < 1 ? 'true' : 'false' }}">
+                    {{ tab }}
+                </button>
+            {% endfor %}
+        </nav>
+        <div class="row">
+            <div class="col-12">
                 {{ post.content }}
-            </section>
-            <section class="col-12 m-0 p-0 ratio ratio-1x1">
-                 <!--suppress HtmlDeprecatedAttribute -->
+            </div>
+        </div>
+        <article class="row mt-3 mb-5 g-5 justify-content-md-center tab-content" id="nav-tabContent">
+            <section class="col-12 m-0 p-0 ratio ratio-1x1 tab-pane fade show active"
+                     id="nav-0"
+                     role="tabpanel"
+                     aria-labelledby="nav-tab-0">
+                <p>
+                    V této mapě jsou uvedeny jednotlivé chemické podniky. Po kliknutí na daný bod můžete získat stručné informace o podniku a o exkurzích, které podnik poskytuje.
+                </p>
+                <p>
+                    Chcete-li získat materiály pro dané exkurze, přejděte na kartu – podklady pro exkurze.
+                </p>
+                <!--suppress HtmlDeprecatedAttribute -->
                 <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d"
-                 id="interactive-map"
-                 allowfullscreen
-                 style="border: 0 none; width: 100%; overflow: hidden; overscroll-behavior: none;"
-                 scrolling="no"
-                 allow="geolocation">
-                 Interaktivní mapa chemických podniků se načítá...
-                 </iframe>
+                        id="interactive-map"
+                        allowfullscreen
+                        style="border: 0 none; width: 100%; overflow: hidden; overscroll-behavior: none;"
+                        scrolling="no"
+                        allow="geolocation">
+                    Interaktivní mapa chemických podniků se načítá...
+                </iframe>
             </section>
-            <section>
+            <section class="col-12 m-0 p-0 tab-pane fade" id="nav-1" role="tabpanel" aria-labelledby="nav-tab-1">
+                <p>
+                    Chcete získat podklady pro jednotlivé exkurze? Po kliknutí na daný podnik se Vám otevře stránka, na které můžete získat jednotlivé dokumenty a zjistit
+                    zajímavé informace o daných podnicích.
+                </p>
                 {% for company in companies %}
-                    {% for location in company.locations %}
-                        {{ dump(company.logo) }}
-                        <!-- MARKER: {{ location.location_name }} LOGO: {{ company.logo }} -->
-                        <h5 class="text-center"><strong>{{ company.title|escape }}</strong></h5>
-                        <h6 class="text-center">{{ location.location_name|escape }}</h6>
-                    {% endfor %}
+                    <article class="col-12 col-md-6 col-lg-4">
+                        <a class="card signpost-card border-0 h-100 text-dark text-decoration-none" href="{{ company.path }}">
+                            {% set image_src = company.logo|default(company.thumbnail.src)|default) %}
+                            {% if image_src|default %}
+                                <div class="w-100 card-img card-img-top mx-auto mt-4 ratio ratio-16x9 rounded rounded-2"
+                                     style="background-image: url({{ image_src }})">
+                                </div>
+                            {% endif %}
+                            <div class="card-body d-flex flex-column align-middle justify-content-center" style="min-height: 6em;">
+                                <h5 class="card-title text-center">
+                                    {{ company.title }}
+                                </h5>
+                            </div>
+                        </a>
+                    </article>
                 {% endfor %}
             </section>
+
         </article>
     {% endblock article_content %}
 {% endblock page_content %}
