Implemented new/updated requirements.

--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -26,25 +26,24 @@
             </div>
         </div>
         <article class="row mt-3 mb-5 g-5 justify-content-md-center tab-content" id="nav-tabContent">
-            <section class="col-12 m-0 p-0 ratio ratio-1x1 tab-pane fade show active"
-                     id="nav-0"
-                     role="tabpanel"
-                     aria-labelledby="nav-tab-0">
+            <section class="col-12 m-0 p-0 tab-pane fade show active" id="nav-0" role="tabpanel" aria-labelledby="nav-tab-0">
                 <p>
                     V této mapě jsou uvedeny jednotlivé chemické podniky. Po kliknutí na daný bod můžete získat stručné informace o podniku a o exkurzích, které podnik poskytuje.
                 </p>
                 <p>
                     Chcete-li získat materiály pro dané exkurze, přejděte na kartu – podklady pro exkurze.
                 </p>
-                <!--suppress HtmlDeprecatedAttribute -->
-                <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d"
-                        id="interactive-map"
-                        allowfullscreen
-                        style="border: 0 none; width: 100%; overflow: hidden; overscroll-behavior: none;"
-                        scrolling="no"
-                        allow="geolocation">
-                    Interaktivní mapa chemických podniků se načítá...
-                </iframe>
+                <div class="ratio ratio-1x1">
+                    <!--suppress HtmlDeprecatedAttribute -->
+                    <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d"
+                            id="interactive-map"
+                            allowfullscreen
+                            style="border: 0 none; width: 100%; overflow: hidden; overscroll-behavior: none;"
+                            scrolling="no"
+                            allow="geolocation">
+                        Interaktivní mapa chemických podniků se načítá...
+                    </iframe>
+                </div>
             </section>
             <section class="col-12 m-0 p-0 tab-pane fade" id="nav-1" role="tabpanel" aria-labelledby="nav-tab-1">
                 <p>
