--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -37,7 +37,7 @@
                 <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d"
                         id="interactive-map"
                         allowfullscreen
-                        style="border: 0 none; width: 100%; overflow: hidden; overscroll-behavior: none; margin-top: -5em;"
+                        style="border: 0 none; width: 100%; overflow: hidden; margin-top: -5em; margin-bottom: -5em;"
                         scrolling="no"
                         allow="geolocation">
                     Interaktivní mapa chemických podniků se načítá...
